flip video and canvas on x

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <video id="inputVideo" autoplay muted></video>
-      <canvas id="overlay"></canvas>
+      <video class="inputVideo flippedX" autoplay muted></video>
+      <canvas class="overlay flippedX"></canvas>
     </div>
     <button id="pbutton">Play/Pause (p)</button>
   </body>
