--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tone.js and faceapi</title>
-    <script src="js/face-api.min.js" /></script>
-    <script defer src="js/script.js"></script>
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <script defer src="dist/main.js"></script>
+    <link type="text/css" rel="stylesheet" href="src/style.css">
   </head>
   <body>
     <div class="container">
