add css grid layout

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Tone.js and faceapi</title>
   </head>
   <body>
-    <div class="container">
+    <div class="video-container">
       <video class="inputVideo flippedX" autoplay muted></video>
       <canvas class="overlay flippedX"></canvas>
     </div>
