--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
       <video class="inputVideo flippedX" autoplay muted></video>
       <canvas class="overlay flippedX"></canvas>
     </div>
-    <button id="pbutton">Play/Pause (p)</button>
+    <div class="synth-controls"></div>
+    <div class="oscilloscope">
+      <button id="pbutton">Play/Pause (p)</button>
+      <button id="start-button">Start</button>
+    </div>
   </body>
 </html>
