updates to synths.js

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="video-container">
-      <video class="inputVideo flippedX" autoplay muted></video>
+      <video class="inputVideo flippedX" muted></video>
       <canvas class="overlay flippedX"></canvas>
     </div>
     <div class="synth-controls"></div>
-    <div class="oscilloscope">
+    <div class="oscilloscope-container">
       <button id="pbutton">Play/Pause (p)</button>
       <button id="start-button">Start</button>
     </div>
