switch to using a list of instruments for scalability

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,11 @@
       <video class="inputVideo flippedX" muted></video>
       <canvas class="overlay flippedX"></canvas>
     </div>
-    <div class="synth-controls"></div>
+    <div class="synth-controls">
+      <form>
+        <input type="radio" name="instr-select" id="synth1" />
+      </form>
+    </div>
     <div class="oscilloscope-container">
       <button id="pbutton">Play/Pause (p)</button>
       <button id="start-button">Start</button>
