--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,13 @@
     <div class="synth-controls">
       <form>
         <input type="radio" name="instr-select" id="synth1" />
+        <input type="radio" name="instr-select" id="synth2" />
       </form>
     </div>
     <div class="oscilloscope-container">
       <button id="pbutton">Play/Pause (p)</button>
       <button id="start-button">Start</button>
+      <canvas id="oscilloscope"></canvas>
     </div>
   </body>
 </html>
