add more radio buttons

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,14 @@
     </div>
     <div class="synth-controls">
       <form>
-        <input type="radio" name="instr-select" id="synth1" />
-        <input type="radio" name="instr-select" id="synth2" />
+        <input type="radio" name="instr-select" id="0" value="sine" />
+        <label for="0">Sine</label>
+        <input type="radio" name="instr-select" id="1" value="triangle" />
+        <label for="1">Triangle</label>
+        <input type="radio" name="instr-select" id="2" value="saw" />
+        <label for="2">Saw</label>
+        <input type="radio" name="instr-select" id="3" value="square" />
+        <label for="3">Square</label>
       </form>
     </div>
     <div class="oscilloscope-container">
